# lie_groups_dynamics_odes

./: .bazelrc  .clang-format  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE  adaptive_steppers.cpp  adaptive_steppers.hpp  aliases.hpp  controller.cpp  controller.hpp  drivers.hpp  eigen.BUILD  heavy_top.cpp  heavy_top.hpp  heavy_top_test.cpp  integrator_test.cpp  non_adaptive_steppers.cpp  non_adaptive_steppers.hpp  so3.cpp  so3.hpp  so3_test.cpp  state.hpp
